a1/brendan_gordon/TEST_PROGRAMS/invalidtype/chia-wei_liu/invalid4.min
var x:int;
var x:int;
var x:string;

